--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "folium>=0.20.0",
     "geopandas>=1.1.1",
     "google-cloud-storage>=3.6.0",
+    "huggingface_hub>=0.20.0",
     "matplotlib>=3.10.7",
     "pillow>=12.0.0",
     "plotly>=6.5.0",
