feat: Introduce data pipeline to calculate extended district statistics and update Streamlit app to consume them, along with Python version and dependency updates.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "final-cologne-green-project"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11,<3.13"
 dependencies = [
     "duckdb>=1.4.2",
     "folium>=0.20.0",
