--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,18 +36,18 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+
+      - name: Install Hugging Face CLI
+        run: pip install huggingface_hub
 
       - name: Push to Hugging Face Space
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions Bot"
-          git subtree push --prefix hf_space \
-            https://${{ env.HF_USERNAME }}:$HF_TOKEN@huggingface.co/spaces/${{ env.HF_USERNAME }}/${{ env.HF_SPACE_NAME }} \
-            main
+          huggingface-cli upload ${{ env.HF_USERNAME }}/${{ env.HF_SPACE_NAME }} \
+            ./hf_space . \
+            --repo-type space \
+            --token $HF_TOKEN
 
       - name: Deployment summary
         run: |
